# rust-docker

./: Cargo.toml  Dockerfile  Dockerfile.buildcache  build.sh  fly.toml  prebuild.sh
src/: main.rs
