[package]
name = "rust-docker"
version = "0.1.0"
edition = "2021"

# [profile.release]
# strip = true  # Automatically strip symbols from the binary.
# opt-level = "z"  # Optimize for size.
# lto = true  # Enable Link Time Optimization (LTO)

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
log = "0.4.19"
serde_json = "1.0.97"
simple_logger = "4.2.0"
